--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,20 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.4",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "mongoose": "^8.1.2"
-  }
+    "mongoose": "^8.1.2",
+    "nodemon": "^3.1.0"
+  },
+  "description": ""
 }
