--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-
-
-  "description": "",
   "main": "server.js",
-
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -17,12 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-
-
     "express": "^4.18.2",
-    "mongoose": "^8.2.1"
-
-
-  }
-
+    "mongoose": "^8.2.1",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "@types/multer": "^1.4.11",
+    "nodemon": "^3.1.0"
+  },
+  "description": ""
 }
