--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@humanwhocodes/object-schema": "^2.0.3",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
@@ -16,12 +18,10 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-
     "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.8",
-
     "web-vitals": "^2.1.4"
   },
   "scripts": {
