--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
